fixed spacing issues

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -40,6 +40,7 @@ select.selectPlayers {
 label.dateRangeLabel {
     color: white;
     font-weight: bold;
+    padding-left: 150px;
 }
 div.configurationGroup {
     display : table-row;
